## CHANGELOG

- __2015/12/24__: 1.1.0 release
    - Issue 64: undefined method 'mecab_model_destory' for Natto::MeCab:Class 
    - Updated Travis rubies

- __2015/07/20__: 1.0.1 release.
    - Issue 62: Ruby warning: shadowing outer local variable - opts

- __2015/04/14__: 1.0.0 release.
    - Issue 36: Fixed @param documentation
    - Issue 37: README and bullet points under Automatic Configuration
    - Issue 38: Updated URLs in documentation to point to Ruby 2.2.1
    - Issue 39: Make refs to MeCab and Tagger consistent in docs
    - Issue 40: Use new Model- and Lattice-based C APIs internally
    - Issue 45: Add support for feature constraint parsing
    - Issue 48: Put in a guard to prevent partial parsing of text that does not end with a new-line char
    - Issue 50: Update all references to Natto::MeCab in documentation to reflect new internal structure
    - Issue 52: Downloads and license badges for README.md & API docs
    - Issue 55: Node parsing with --all-morphs option missing surface values

- __2015/03/31__: 0.9.9 release.
    - Issue 21/34: Implemented boundary constraint parsing.
    - Issue 26: Removing deprecated methods parse_as_nodes, parse_as_strings, readnodes and readlines.
    - Issue 32: Fixed partial parsing.
    - Updated documentation for new MeCab home at http://taku910.github.io/mecab/.

- __2015/02/10__: 0.9.8 release.
    - Migrated natto code home from Bitbucket to GitHub.
    - Improved documentation following said migration.
    - Minor refactoring to Natto::MeCabNode#to_s.
    - Updating LICENSE for year 2015. 

- __2014/12/20__: 0.9.7 release.
    - Issue 14: adding automatic discovery for mecab library; no need to explicitly set MECAB_PATH
    - Issue 15: refactored node-parsing to use Enumerator instead of materializing every node and stuffing into array
    - Issue 17: adding filepath to MeCab and DictionaryInfo
    - Issue 18: bug-fix for node-formatting during default node parse