@@ -24,4 +24,4 @@ rvm:
   - 2.2.5
   - 2.3.1
   - jruby-1.7.20
-  - jruby-9.0.5.0
+  #- jruby-9.0.5.0
