@@ -26,10 +26,10 @@
 # `Natto`.
 module Natto
   # Version string for this Rubygem.
-  VERSION = "1.1.0"
+  VERSION = "1.1.1"
 end
 
-# Copyright (c) 2015, Brooke M. Fujita.
+# Copyright (c) 2016, Brooke M. Fujita.
 # All rights reserved.
 # 
 # Redistribution and use in source and binary forms, with or without
