@@ -686,7 +686,7 @@ class TestMeCab < Minitest::Test
   end
 end 
 
-# Copyright (c) 2015, Brooke M. Fujita.
+# Copyright (c) 2016, Brooke M. Fujita.
 # All rights reserved.
 # 
 # Redistribution and use in source and binary forms, with or without
